deployments/glasskube/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracecat-ui
spec:
  selector: {}
  template:
    spec:
      containers:
        - name: tracecat-ui
          image: ui
          ports:
            - containerPort: 3000
