deployments/glasskube/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracecat-ui
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tracecat-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracecat-ui
                port:
                  number: 3000
# TODO TLS?
